fixed padding on the cards to alighn better on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@ background-size: cover;
   background-attachment: fixed;
   background-repeat: repeat; */
   color: aliceblue;
-  padding-left: 15%;
-  padding-right: 15%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 
