--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -2,6 +2,8 @@
     width: inherit;
     margin: inherit;
     margin-top: 60px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .card-body {
